Add styling to movies homepage

--- a/src/Containers/views/index.css
+++ b/src/Containers/views/index.css
@@ -89,6 +89,7 @@ section.search {
 .overview {
   font-size: 0.9em;
   margin-top: 30px;
+  font-family: 'Source Sans Pro', Arial, sans-serif
 }
 
 .footer {
